Fix diff viewport overflow caused by table layout
Disable table layout on the inline diff view, as tables size to their
contents, causing overflows.

Also set word-wrap to break-word instead of break-all, which is what
we use everywher else and works just fine.

Bug: T171726

--- a/resources/mobile.special.mobilediff.styles/mobilediff.less
+++ b/resources/mobile.special.mobilediff.styles/mobilediff.less
@@ -34,6 +34,13 @@ footer {
 }
 
 .diff {
+	// Make sure the contents of our layout table do not overflow viewport
+	display: block;
+
+	tbody, tr, td {
+		display: block;
+	}
+
 	.diff-title {
 		display: none;
 	}
@@ -86,8 +93,8 @@ footer {
 	.mw-diff-inline-deleted del,
 	.mw-diff-inline-changed del {
 		color: #000;
-		word-break: break-all;
 		text-decoration: none;
+		word-wrap: break-word;
 	}
 
 	> span {
